improved review form

--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -366,8 +366,9 @@
               </div>
             </div>
             <% end %>
-          
-            <div class="accordion accordion-flush mt-3" id="accordionFlushExample">
+          </div>
+
+          <div class="accordion accordion-flush mt-3 restaurant-hours" id="accordionFlushExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -381,12 +382,7 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
-      </div>
-
-      <div class="modal-footer">
-
       </div>
     </div>
   </div>
