--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -270,94 +270,98 @@
             <% if restaurant.reviews.second.present? %>
               <div class="card restaurant-review-card" style="width: 24rem;">
                 <div class="card-body">
-                  <p class="card-text"><%= restaurant.reviews.second.description %></p>
+                  <div class="restaurant-review-title"><%= @dishes.find_by_id(restaurant.reviews.first.dish).name %></div>
+                  <div class="restaurant-review-text"><%= restaurant.reviews.first.description %></div>
                 </div>
                 <div class="container-fluid">
                   <div class="row">
-                    <div class="col-3">
-                      <%= image_tag("tony_400.jpg", class: "img-fluid restaurant-review-picture") %>
+                    <div class="col-2 no-padding">
+                      <%= image_tag("tony_400.jpg", class: "img-fluid restaurant-review-picture") %> <!-- TODO: make profile picture -->
                     </div>
-                    <div class="col-9">
-                      <div class="container-fluid">
+                    <div class="col-10">
+                    <!-- User Info -->
+                      <div class="container">
                         <div class="row">
-                          <p class='ml-3'>User ID: <%= restaurant.reviews.second.user_id %></p>
-                          <p>Dish: <%= restaurant.reviews.second.dish %></p>
+                          <div class="restaurant-review-name"><%= @users.find_by_id(restaurant.reviews.first.user_id).firstname %> <%= @users.find_by_id(restaurant.reviews.first.user_id).lastname %></div>                 
                         </div>
-                        <div class="row">
-                          <% if restaurant.reviews.second.authenticity == 5 %>
-                          <p>Authenticity</p>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <% elsif restaurant.reviews.second.authenticity == 4 %>
-                          <p>Authenticity</p>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <% elsif restaurant.reviews.second.authenticity == 3 %>
-                          <p>Authenticity</p>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <% elsif restaurant.reviews.second.authenticity == 2 %>
-                          <p>Authenticity</p>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <% elsif restaurant.reviews.second.authenticity == 1 %>
-                          <p>Authenticity</p>
-                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                          <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
+
+                        <div class="row no-paading">
+                          <% if restaurant.reviews.first.authenticity == 5 %>
+                            
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% elsif restaurant.reviews.first.authenticity == 4 %>
+                            
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% elsif restaurant.reviews.first.authenticity == 3 %>
+                            
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% elsif restaurant.reviews.first.authenticity == 2 %>
+                            
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col no-paading"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col-4"></div>
+                          <% elsif restaurant.reviews.first.authenticity == 1 %>
+                            
+                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
                           <% end %>
                         </div>
                           <div class="row">
-                            <% if restaurant.reviews.second.value == 5 %>
-                            <p>Value</p>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <% elsif restaurant.reviews.second.value == 4 %>
-                            <p>Value</p>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <% elsif restaurant.reviews.second.value == 3 %>
-                            <p>Value</p>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <% elsif restaurant.reviews.second.value == 2 %>
-                            <p>Value</p>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <% elsif restaurant.reviews.second.value == 1 %>
-                            <p>Value</p>
-                            <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %>
-                            <% end %>
+                          <% if restaurant.reviews.first.value == 5 %>
+                            
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% elsif restaurant.reviews.first.value == 4 %>
+                            
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% elsif restaurant.reviews.first.value == 3 %>
+                            
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% elsif restaurant.reviews.first.value == 2 %>
+                            
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col-4"></div>
+                          <% elsif restaurant.reviews.first.value == 1 %>
+                            
+                            <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col"><%= image_tag("icon_dimond_negative.png", class: "img-fluid restaurant-review-star") %></div>
+                          <% end %>
                         </div>
                       </div>
                     </div>
