--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><%= link_to "Home", class: "navbar-brand", new_session_path(resource_name) %></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"></a></li>
       <li class="nav-item"><a href="https://github.com/AnthonyHeinrichs" class="nav-link px-2 text-muted">Anthony</a></li>
       <li class="nav-item"><a href="https://github.com/ddeift" class="nav-link px-2 text-muted">Dan</a></li>
       <li class="nav-item"><a href="https://github.com/SaintALY" class="nav-link px-2 text-muted">Amadeus</a></li>
