--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -43,17 +43,15 @@
   <% else %>
  
   <div class="container">
-    
-        <div class="col-xs-12 col-sm-8 offset-sm-1">
-          <div class='d-flex flex-row flex-wrap justify-content-around'>
+        <div class="d-flex justify-content-between flex-wrap">
             <% @restaurants.each_with_index do | restaurant, index | %>
               <a data-bs-toggle="modal" data-bs-target="#restaurantModal<%= index %>">
                 <%= render 'restaurant_card', restaurant: restaurant, index: index %>
               </a>
-              <%= render 'restaurant_modal', restaurant: restaurant, index: index %>
-            <% end %>
-          </div>
+
         </div>
+                      <%= render 'restaurant_modal', restaurant: restaurant, index: index %>
+            <% end %>
   </div>
   <% end %>
 
