--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -28,12 +28,9 @@
 
   <!-- Rendered Dish-List -->
   <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="col-xs-12 col-sm-6 "> <!-- TODO: adjust grid -->
-          <%= render 'list', dishes: @dishes %>
-        </div>
-      </div>
+    <div class="d-flex flex-wrap justify-content-between">
+      <%= render 'list', dishes: @dishes %>
+
     </div>
   </div>
 
