--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -13,6 +13,7 @@
             <!-- 1. Title / Review Button -->
             <div class="row">
               <div class="col restaurant-headline"><%= restaurant.name %></div>
+              <%= link_to "edit", edit_restaurant_path(restaurant)%>
             </div>
 
             <!-- 2. Tags / Dashboard -->
