--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a Restaurant</h1>
+<h1>Edit Restaurant</h1>
 <div class="restaurant_form" data-controller="new-restaurant">
 <%= simple_form_for(@restaurant)  do |f| %>
     <%= f.input :name, required: true %>
@@ -7,10 +7,6 @@
     <%= f.input :website, required: true, hint: "www.sample.com" %>
     <%= f.input :photos, as: :file, input_html: { multiple: true }%>
 
-      <%= simple_fields_for :other do |o| %>
-       <%= o.input :country, as: :country, label: 'Where are your dishes from?', input_html: {data:{new_restaurant_target: 'input', action: 'change->new-restaurant#fetchCountry'}} %>
-       <% end %>
-      <div data-new-restaurant-target="select"></div>
     <%= f.submit %>
   <% end %>
 </div>
