made dish tags nicer, dynamic rating

--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -9,7 +9,9 @@
            <!-- Doesnt take the myid as 87 -->
 
           <% dish.restaurants.each do |restaurant| %>
-            <%= restaurant.name %>
+            <p><button class="btn btn-sm restaurant-tags" type="button">
+              <%= restaurant.name %>
+            </button></p>
           <% end %>
 
       </div>
