--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col">
                       <div class="restaurant-dashboard-title">RATING</div>
-                      <div class="restaurant-dashboard-content">4.5</div>
+                      <div class="restaurant-dashboard-content"><%= rand(1..4) %>.<%= rand(1..9) %></div>
                     </div>
                     <div class="col">
                       <div class="restaurant-dashboard-title">DISTANCE</div>
