--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,7 +13,7 @@ $yellow: #FB8B24;
 $red: #9A031E;
 $text-color: #031037;
 $pop-background: rgba(255, 254, 254, 0.95);
-$shadow: 1px 1px 6px 1px rgb(143, 141, 141);
+$shadow: 1px 1px 6px 1px rgba(170, 170, 170, 0.623);
 $black: black;
 $nav-background: rgb(70, 143, 70);
 $cards-background: rgb(254, 220, 189)
