--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -20,16 +20,20 @@
                       <div class="dishlist-dashboard-content">
                         <!-- Validating if a restaurant is open -->
                         <% week = restaurant.openings %>
-                        <% if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
-                          <div class="restaurant-dashboard-content-open">Open</div>
+                        <% if week[@daynow] != nil %>
+                          <%# if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
+                            <div class="restaurant-dashboard-content-open">Open</div>
+                          <%# else %>
+                            <!--<div class="restaurant-dashboard-content-closed">Closed</div>-->
+                          <%# end %>
                         <% else %>
-                          <div class="restaurant-dashboard-content-closed">Closed</div>
+                          <div class="restaurant-dashboard-content-open">n/a</div>
                         <% end %>
                       </div>
                     </div>
                     <div class="col">
                       <div class="dishlist-dashboard-title">RATING</div>
-                      <div class="dishlist-dashboard-content"><%= rand(1..4) %>.<%= rand(1..9) %></div>
+                      <div class="dishlist-dashboard-content"><%= rand(2..4) %>.<%= rand(1..9) %></div>
                     </div>
                     <div class="col">
                       <div class="dishlist-dashboard-title">DISTANCE</div>
