--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -6,6 +6,10 @@
     <%= f.input :telephone, required: true, hint: "exp. +49 30 0000 000" %>
     <%= f.input :website, required: true, hint: "www.sample.com" %>
     <%= f.input :photos, as: :file, input_html: { multiple: true }%>
+    <%= simple_fields_for :openings do |p| %>
+       <%= p.input :start_hour, required: true %>
+       <%= p.input :end_hour, required: true %>
+       <% end %>
 
       <%= simple_fields_for :other do |o| %>
        <%= o.input :country, as: :country, label: 'Where are your dishes from?', input_html: {data:{new_restaurant_target: 'input', action: 'change->new-restaurant#fetchCountry'}} %>
@@ -16,3 +20,9 @@
 </div>
 
 <%= link_to "Back", restaurants_path(@restaurant)%>
+
+
+  create_table "openings", force: :cascade do |t|
+    t.integer "weekday"
+    t.integer "start_hour"
+    t.integer "end_hour"
