Can search by dishes

--- a/app/assets/stylesheets/components/_modalrestaurant.scss
+++ b/app/assets/stylesheets/components/_modalrestaurant.scss
@@ -2,7 +2,7 @@
 .restaurant-modal {
     border-radius: 6%;
     background: $pop-background;
-    
+
     box-shadow: 0px 0px 50px 15px #cccccc7e;
 }
 
@@ -32,6 +32,7 @@
     background-color: $yellow;
     color: $white;
     display: inline-block;
+    text-decoration: none;
 }
 
 /* REVIEW BUTTON */
