added header text

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,15 @@
 // Specific CSS for your home-page
+.dish-index-title-h1 {
+  text-align: center;
+  color: $text-color;
+  margin-top: 80px;
+}
+
+.dish-index-title-h2 {
+  text-align: center;
+  color: $text-color;
+}
+
+.index-dish-cards {
+  margin-top: -40px;
+}
