--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -27,8 +27,14 @@
   </div>
 
   <!-- Rendered Dish-List -->
+  <h2 class='dish-index-title-h1'>Traditional Picks</h2>
+  <% if params[:query].present? %>
+    <p class='dish-index-title-h2'>What people crave from <%= params[:query] %></p>
+  <% else %>
+    <p class='dish-index-title-h2'>What people crave from around the world </p>
+  <% end %>
   <div class="container">
-    <div class="d-flex flex-wrap justify-content-between">
+    <div class="d-flex flex-wrap justify-content-between index-dish-cards">
       <%= render 'list', dishes: @dishes %>
 
     </div>
