--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -20,10 +20,12 @@
                       <div class="dishlist-dashboard-content">
                         <!-- Validating if a restaurant is open -->
                         <% week = restaurant.openings %>
-                        <% if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
+                        <% if week.first == nil %>
+                        <%# if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
                           <div class="restaurant-dashboard-content-open">Open</div>
-                        <% else %>
-                          <div class="restaurant-dashboard-content-closed">Closed</div>
+                        <%# else %>
+                          <!-- <div class="restaurant-dashboard-content-closed">Closed</div> -->
+                        <%# end %>
                         <% end %>
                       </div>
                     </div>
