--- a/app/assets/stylesheets/components/_modalrestaurant.scss
+++ b/app/assets/stylesheets/components/_modalrestaurant.scss
@@ -1,6 +1,6 @@
 /* 1. HEAD, TAGS REVIEW, BUTTON */
 .restaurant-modal {
-    border-radius: 5%;
+    border-radius: 10px;
     background: $pop-background;
 
     box-shadow: 0px 0px 50px 15px #cccccc7e;
@@ -92,7 +92,7 @@
 
 /* MAP */
 .restaurant-map {
-    border-radius: 7%;
+    border-radius: 10px;
 }
 
 /* Buttons below the map */
