fixed cards so they look proper

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,8 @@
 .dishlist-container {
   width: 480px;
   height: 195px;
+  margin: 1.25rem;
+  margin-top: -5px;
 }
 .dishlist-card {
   width: 480px;
