adjusted some more border radius

--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -79,7 +79,7 @@
             <!-- 3. Text / Map -->
             <div class="row">
               <div class="col-6">
-                <p><%= restaurant.address %></p>
+                <p class="restaurant-dashboard-title"><%= restaurant.address %></p>
 
                 <%= restaurant.description %>
               </div >
