style dish moda and fitted margins

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -56,7 +56,7 @@
     max-height: 300px;
     margin-bottom: 15px;
     object-fit: cover;
-    min-width: 720px;
+    min-width: 97%;
     border-radius: 10px;
   }
   .description {
