--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,8 +12,8 @@ $gray: #DDDDDD;
 $yellow: #FB8B24;
 $red: #9A031E;
 $text-color: #031037;
-$pop-background: rgba(255, 254, 254, 0.95);
+$pop-background: rgba(255, 254, 254, 0.918);
 $shadow: 1px 1px 6px 1px rgba(170, 170, 170, 0.623);
 $black: black;
 $nav-background: rgb(70, 143, 70);
-$cards-background: rgb(254, 220, 189)
+$cards-background: #ffc29552
