--- a/app/views/dishes/_dish_infos.html.erb
+++ b/app/views/dishes/_dish_infos.html.erb
@@ -38,8 +38,8 @@
                       <div class="dishlist-dashboard-content"><%= rand(1..4) %>.<%= rand(1..9) %></div>
                     </div>
                     <div class="col">
-                      <div class="dishlist-dashboard-title">PLACE</div>
-                      <div class="dishlist-dashboard-content">holder</div>
+                      <div class="dishlist-dashboard-title"></div>
+                      <div class="dishlist-dashboard-content"></div>
                     </div>
                   </div>
                 </div>
