changed nav links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
       <li class="nav-item"><a href="https://github.com/AnthonyHeinrichs" class="nav-link px-2 text-muted">Anthony</a></li>
       <li class="nav-item"><a href="https://github.com/ddeift" class="nav-link px-2 text-muted">Dan</a></li>
       <li class="nav-item"><a href="https://github.com/SaintALY" class="nav-link px-2 text-muted">Amadeus</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="https://github.com/AnthonyHeinrichs/Dish-List-App/blob/master/README.md" class="nav-link px-2 text-muted">About</a></li>
     </ul>
     <p class="text-center text-muted">© 2022 Dish-List, Inc</p>
   </footer>
