wrote elogic for HOURS

--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -20,12 +20,14 @@
                       <div class="dishlist-dashboard-content">
                         <!-- Validating if a restaurant is open -->
                         <% week = restaurant.openings %>
-                        <% if week.first == nil %>
-                        <%# if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
-                          <div class="restaurant-dashboard-content-open">Open</div>
-                        <%# else %>
-                          <!-- <div class="restaurant-dashboard-content-closed">Closed</div> -->
-                        <%# end %>
+                        <% if week.first.nil? %>
+                          <div class="restaurant-dashboard-content-closed">n/a</div>
+                        <% else %>
+                          <% if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
+                            <div class="restaurant-dashboard-content-open">Open</div>
+                          <% else %>
+                             <div class="restaurant-dashboard-content-closed">Closed</div>
+                          <% end %>
                         <% end %>
                       </div>
                     </div>
