--- a/app/assets/stylesheets/components/_modalrestaurant.scss
+++ b/app/assets/stylesheets/components/_modalrestaurant.scss
@@ -93,6 +93,7 @@
 /* MAP */
 .restaurant-map {
     border-radius: 10px;
+    width: 98%;
 }
 
 /* Buttons below the map */
@@ -106,7 +107,7 @@
     border-radius: 10px;
     background: #e7e7e7d7;
     align-items: center;
-    padding: 33%;
+    padding: 27%;
 }
 .restaurant-button-icon  {
     width: 2.1rem;
