finnished front-end for forms and profile

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,4 +16,4 @@ $pop-background: rgba(255, 254, 254, 0.95);
 $shadow: 1px 1px 6px 1px rgba(170, 170, 170, 0.623);
 $black: black;
 $nav-background: rgb(70, 143, 70);
-$cards-background: rgb(254, 220, 189)
+$cards-background: #468f4663
