--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,28 +1,26 @@
-<h1>Add a Restaurant</h1>
-<div class="restaurant_form" data-controller="new-restaurant">
-<%= simple_form_for(@restaurant)  do |f| %>
-    <%= f.input :name, required: true %>
-    <%= f.input :address, required: true, hint: "Enter the street and city" %>
-    <%= f.input :telephone, required: true, hint: "exp. +49 30 0000 000" %>
-    <%= f.input :website, required: true, hint: "www.sample.com" %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true }%>
-    <%= simple_fields_for :openings do |p| %>
-       <%= p.input :start_hour, required: true %>
-       <%= p.input :end_hour, required: true %>
-       <% end %>
+<div class="form-style-general">
+  <h1>Add a Restaurant</h1>
+  <div class="restaurant_form" data-controller="new-restaurant">
+  <%= simple_form_for(@restaurant)  do |f| %>
+      <%= f.input :name, required: true %>
+      <%= f.input :address, required: true, hint: "Enter the street and city" %>
+      <%= f.input :telephone, required: true, hint: "exp. +49 30 0000 000" %>
+      <%= f.input :website, required: true, hint: "www.sample.com" %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true }%>
+      <div class="hours-form">
+        <%= simple_fields_for :openings do |p| %>
+          <%= p.input :start_hour, required: true %>
+          <%= p.input :end_hour, required: true %>
+          <% end %>
+      </div>
 
-      <%= simple_fields_for :other do |o| %>
-       <%= o.input :country, as: :country, label: 'Where are your dishes from?', input_html: {data:{new_restaurant_target: 'input', action: 'change->new-restaurant#fetchCountry'}} %>
-       <% end %>
-      <div data-new-restaurant-target="select"></div>
-    <%= f.submit %>
-  <% end %>
+        <%= simple_fields_for :other do |o| %>
+        <%= o.input :country, as: :country, label: 'Where are your dishes from?', input_html: {data:{new_restaurant_target: 'input', action: 'change->new-restaurant#fetchCountry'}} %>
+        <% end %>
+        <div data-new-restaurant-target="select"></div>
+      <%= f.submit %>
+    <% end %>
+  </div>
+
+  <%= link_to "Back", restaurants_path(@restaurant), class: "dan"%>
 </div>
-
-<%= link_to "Back", restaurants_path(@restaurant)%>
-
-
-  create_table "openings", force: :cascade do |t|
-    t.integer "weekday"
-    t.integer "start_hour"
-    t.integer "end_hour"
