--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="https://github.com/AnthonyHeinrichs/Dish-List-App/blob/master/README.md" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="https://github.com/AnthonyHeinrichs" class="nav-link px-2 text-muted">Anthony</a></li>
       <li class="nav-item"><a href="https://github.com/ddeift" class="nav-link px-2 text-muted">Dan</a></li>
       <li class="nav-item"><a href="https://github.com/SaintALY" class="nav-link px-2 text-muted">Amadeus</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="" class="nav-link px-2 text-muted">About</a></li>
     </ul>
     <p class="text-center text-muted">© 2022 Dish-List, Inc</p>
   </footer>
