--- a/app/assets/stylesheets/components/_forms-styling.scss
+++ b/app/assets/stylesheets/components/_forms-styling.scss
@@ -27,7 +27,31 @@
   margin-left: -12px;
 }
 
+.hour-input {
+  display: flex;
+  justify-content: space-between;
+  margin-inline: 2px;
+
+  input {
+    width: 50%;
+  }
+}
+
 .hours-form {
   display: flex;
   justify-content: space-between;
+}
+
+.input-cover-hours {
+  display: flexbox;
+}
+
+.days {
+  margin-top: 40px;
+  margin-left: 5px;
+  margin-right: 30px;
+
+  p {
+    margin-bottom: 30px;
+  }
 }
