added margin to back link

--- a/app/assets/stylesheets/components/_forms-styling.scss
+++ b/app/assets/stylesheets/components/_forms-styling.scss
@@ -17,9 +17,15 @@
 
   }
 }
+.links-on-form {
+  margin-top: 10px;
+  margin-left: 2px;
+}
+
 .dan {
   text-decoration: none;
   color: $text-color;
+
 }
 
 .form-submit {
