--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -72,6 +72,7 @@
       <%= f.submit %>
     <% end %>
   </div>
-
-  <%= link_to "Back", restaurants_path(@restaurant), class: "dan"%>
+  <div class="links-on-form">
+    <%= link_to "Back", restaurants_path(@restaurant), class: "dan"%>
+  </div>
 </div>
