--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -12,7 +12,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                             <% if user_signed_in? %>
-                            <li><%= link_to "Home", "#", class: "dropdown-item" %></li>
+                            <li><%= link_to "Home", "/", class: "dropdown-item" %></li>
                             <li><%= link_to "Profile", current_user, class: "dropdown-item" %></li>
                             <li><%= link_to "Add a Restaurant", new_restaurant_path, class: "dropdown-item" %></li>
                             <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
