--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -82,11 +82,9 @@
             </div>
 
             <!-- 3. Text / Map -->
-            <div class="row">
-              <div class="col-6">
-
-
-                <%= restaurant.description %>
+            <div class="row ">
+              <div class="col restaurant-description">
+              <%= restaurant.description %>
               </div >
 
               <div class="col-6 restaurant-map-container">
@@ -189,13 +187,13 @@
               <div class="card restaurant-review-card" style="width: 24rem;">
                 <div class="card-body">
                   <div class="restaurant-review-title"><%= @dishes.find_by_id(restaurant.reviews.first.dish).name %></div>
-                  <div class="restaurant-review-text"><%= restaurant.reviews.first.description %></div>
+                  <div class="restaurant-review-text">
+                    <p><%= restaurant.reviews.first.description %></p>
+                  </div>
                 </div>
                 <div class="container-fluid">
                   <div class="row">
-                    <div class="col-2">
-                      <%= image_tag("tony_400.jpg", class: "img-fluid restaurant-review-picture") %> <!-- TODO: make profile picture -->
-                    </div>
+                    
                     <div class="col-10">
                     <!-- User Info -->
                       <div class="container">
@@ -206,7 +204,7 @@
                         <div class="row no-paading" style="width: 75%;">
                           <% if restaurant.reviews.first.authenticity == 5 %>
 
-                            <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
+                            <div class="col-sm"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
                             <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
                             <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
                             <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
@@ -242,7 +240,7 @@
                             <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
                           <% end %>
                         </div>
-                        <div class="row" style="width: 75%;">
+                        <div class="row" style="width: 75%; padding-bottom: 0.8rem;">
                           <% if restaurant.reviews.first.value == 5 %>
 
                             <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
@@ -297,9 +295,7 @@
                 </div>
                 <div class="container-fluid">
                   <div class="row">
-                    <div class="col-2 no-padding">
-                      <%= image_tag("tony_400.jpg", class: "img-fluid restaurant-review-picture") %> <!-- TODO: make profile picture -->
-                    </div>
+                    
                     <div class="col-10">
                     <!-- User Info -->
                       <div class="container">
@@ -346,7 +342,7 @@
                             <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
                           <% end %>
                         </div>
-                        <div class="row" style="width: 75%;">
+                        <div class="row" style="width: 75%; padding-bottom: 0.8rem;">
                           <% if restaurant.reviews.second.value == 5 %>
 
                             <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
